# ai-coach

./: .gitignore  README.md  pyproject.toml
config/: settings.yaml
src/: coach.py  main.py  stt.py  tts.py
