[project]
name = "ai-coach"
version = "0.1.0"
description = "An offline voice coach that helps you reflect and find solutions through targeted questions, while preserving your privacy."
authors = [
    {name = "FabrizioAI",email = "fabrizio.programmazione@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper (>=1.2.0,<2.0.0)",
    "sounddevice (>=0.5.2,<0.6.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "rich (>=14.1.0,<15.0.0)",
    "ollama (>=0.5.3,<0.6.0)",
    "torch (>=2.5.1,<3.0.0)",
    "piper-onnx (>=1.0.6,<2.0.0)",
    "onnxruntime (>=1.22.1,<2.0.0)",
    "pyttsx3 (>=2.99,<3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"
[tool.poetry.dependencies]
torch = {source = "pytorch-cu121"}
